force-app/src/objects/FontevaPay__Payout__c.object
<CustomObject>
    <fields>
        <fullName>FontevaPay__Adjustments_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Adjustments associated with this Payout.</description>
        <inlineHelpText>Number of Adjustments associated with this Payout.</inlineHelpText>
        <label>Adjustments Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Arrival_Date__c</fullName>
        <description>Date the payout is expected to arrive in the bank. This factors in delays like weekends or bank holidays.</description>
        <inlineHelpText>Date the payout is expected to arrive in the bank. This factors in delays like weekends or bank holidays.</inlineHelpText>
        <label>Arrival Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Balance_Transaction_Id__c</fullName>
        <description>SYSTEM - ID of the Balance Transaction Id that describes the impact of this payout on your account balance.</description>
        <externalId>true</externalId>
        <inlineHelpText>SYSTEM - ID of the Balance Transaction Id that describes the impact of this payout on your account balance.</inlineHelpText>
        <label>Balance Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Charges_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Charges associated with this Payout.</description>
        <inlineHelpText>Number of Charges associated with this Payout.</inlineHelpText>
        <label>Charges Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Created_Date__c</fullName>
        <description>Time at which the object was created.</description>
        <inlineHelpText>Time at which the object was created.</inlineHelpText>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Deposit_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Net value deposited or withdrawn from the the merchant bank account.</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Fee__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Summarizes the total amount of fees associated with this payout.</description>
        <inlineHelpText>Summarizes the total amount of fees associated with this payout.</inlineHelpText>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Gross_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This value defines the summarized total of all charges less refunds prior to fees.</description>
        <inlineHelpText>This value defines the summarized total of all charges less refunds prior to fees.</inlineHelpText>
        <label>Gross Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Is_Charges_Count_Mismatch__c</fullName>
        <formula>(FontevaPay__Charges_Count__c + FontevaPay__Refunds_Count__c + FontevaPay__Transfers_Count__c + FontevaPay__Adjustments_Count__c) != FontevaPay__Related_Charges_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Charges Count Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Payout_Id__c</fullName>
        <description>SYSTEM - Unique Id for Payouts</description>
        <externalId>true</externalId>
        <inlineHelpText>SYSTEM - Unique Id for Payouts</inlineHelpText>
        <label>Payout Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FontevaPay__Refunds_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Refunds associated with this Payout.</description>
        <inlineHelpText>Number of Refunds associated with this Payout.</inlineHelpText>
        <label>Refunds Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Related_Charges_Count__c</fullName>
        <label>Related Charges Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Status__c</fullName>
        <inlineHelpText>Completion of deposit or withdrawal from merchant bank account.</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Stripe_Connected_Account_Id__c</fullName>
        <label>Stripe Connected Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FontevaPay__Transfers_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Transfers associated with this Payout.</description>
        <inlineHelpText>Number of Transfers associated with this Payout.</inlineHelpText>
        <label>Transfers Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payout</label>
    <listViews>
        <fullName>FontevaPay__All</fullName>
        <columns>NAME</columns>
        <columns>FontevaPay__Payout_Id__c</columns>
        <columns>FontevaPay__Gross_Amount__c</columns>
        <columns>FontevaPay__Fee__c</columns>
        <columns>FontevaPay__Deposit_Amount__c</columns>
        <columns>FontevaPay__Arrival_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0000000000}</displayFormat>
        <label>Payout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>